Composer: Spell checking is auto-enabled on mode change
With version 3.46.2 from Fedora 37, in any of the markdown modes, the email composer always highlights words in red due to live spellchecking, even if I turn it off entirely in the preferences.
Other composer modes (HTML or plain text) are not affected.