I#2205 - Composer: Spell checking is auto-enabled on mode change

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/2205